--- a/css/styles.css
+++ b/css/styles.css
@@ -25,6 +25,11 @@ html {
     margin-bottom: 0;
 }
 
+*:hover,
+:focus {
+    transition: all 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
 body {
     background-color: var(--primary-white-color);
     font-family: "Roboto", sans-serif;
@@ -41,7 +46,8 @@ button:hover {
     transition: all 750ms cubic-bezier(0.4, 0, 0.2, 1);
 } */
 
-body a:focus {
+body a:focus,
+body a:hover {
     color: var(--blue-text-color);
 }
 
@@ -248,6 +254,7 @@ ul {
     margin: 0 auto;
     color: var(--primary-white-color);
     padding: 10px 32px;
+    border: none;
 }
 
 .main-title-button:hover,
@@ -680,6 +687,41 @@ ul {
 
 .project-image {
     display: block;
+}
+
+.project-block {
+    position: relative;
+    display: block;
+    overflow: hidden;
+}
+
+.project-image-info {
+    position: absolute;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background: rgba(33, 150, 243, 0.9);
+    width: 100%;
+    height: 100%;
+    top: 100%;
+    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.project-image-text {
+    font-weight: normal;
+    font-size: 18px;
+    line-height: 1.56;
+    letter-spacing: 0.03em;
+    color: #ffffff;
+    padding: 63px 24px;
+}
+
+.project-block:hover .project-image-info {
+    transform: translateY(-100%);
+}
+
+.project-card a:focus .project-image-info {
+    transform: translateY(-100%);
 }
 
 .under-image-text {
