--- a/css/styles.css
+++ b/css/styles.css
@@ -599,6 +599,10 @@ ul {
     background-color: var(--blue-text-color);
 }
 
+.whitetext:hover {
+    color: var(--blue-text-color);
+}
+
 .footer-icon-image {}
 
 
@@ -751,4 +755,49 @@ ul {
     line-height: 1.9;
     letter-spacing: 0.03em;
     color: var(--contacts-paragraph-employee-position-color);
+}
+
+
+/*MODAL WINDOWS*/
+
+.backdrop {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.2);
+}
+
+.backdrop.is-hidden {
+    opacity: 0;
+    pointer-events: none;
+}
+
+.modal {
+    position: absolute;
+    width: 528px;
+    height: 581px;
+    background-color: #ffffff;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
+
+.close-btn {
+    position: absolute;
+    width: 30px;
+    height: 30px;
+    right: 8px;
+    top: 8px;
+    background: #ffffff;
+    border: 1px solid rgba(0, 0, 0, 0.1);
+    border-radius: 50%;
+}
+
+.close-cross {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
 }
